Create segue from cell to detailView

--- a/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
+++ b/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
@@ -51,6 +51,9 @@
                                         <outlet property="entryTitleLabel" destination="xPr-Ni-qgj" id="Kc5-ud-TdH"/>
                                     </connections>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Gyg-Lt-hoJ" kind="show" id="95f-f5-3Kb"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -140,4 +143,7 @@
             <point key="canvasLocation" x="-215.94202898550725" y="-79.017857142857139"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="95f-f5-3Kb"/>
+    </inferredMetricsTieBreakers>
 </document>
