Prepare for segue

--- a/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
+++ b/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                     </connections>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Gyg-Lt-hoJ" kind="show" id="95f-f5-3Kb"/>
+                                    <segue destination="Gyg-Lt-hoJ" kind="show" identifier="EditEntryShowSegue" id="95f-f5-3Kb"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
