Added the 3 labels from cell

--- a/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
@@ -60,6 +60,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="bodyTextLabel" destination="KYF-2H-oLx" id="jeA-S0-QHP"/>
+                                    <outlet property="timeStampLabel" destination="iPv-0A-hwJ" id="0rn-oM-lJX"/>
+                                    <outlet property="titleLabel" destination="F1M-HT-fNP" id="hdV-QT-KY0"/>
                                     <segue destination="thJ-ur-CO1" kind="presentation" identifier="SavedEntryModalSegue" modalPresentationStyle="fullScreen" id="kQ0-Em-OS2"/>
                                 </connections>
                             </tableViewCell>
